--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -111,6 +111,8 @@ charset = File charset
 
 chart.mean                = Bedeuten
 
+chartBackgroundColor = Chart background color
+
 chartlabel.atypicalValue  = Atypischer Wert
 chartlabel.firstquartile  = Erstes Quartil
 chartlabel.generalMean    = General Mean
@@ -258,6 +260,8 @@ label.withcompletion              = Completed Act.
 label.withhidden                  = Mit verstecktem
 
 legendActive = Diagrammlegende
+
+limitDays = Limit days
 
 log.component.activity_report                                   = Kursaktivit\u00E4t
 log.component.assignment                                        = Aufgabe
@@ -746,32 +750,34 @@ message.export_csv_desglossed = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie
 message.export_csv_success    = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.export_png            = PNG-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 
-module.assign      = Zuordnung
-module.book        = Buch
-module.category    = Kategorie
-module.chat        = Plaudern
-module.choice      = Wahl
-module.data        = Datenbank
-module.feedback    = Feedback
-module.folder      = Mappe
-module.forum       = Forum
-module.glossary    = Glossar
-module.guiadocente = Teaching guide
-module.imscp       = IMS-Inhaltspaket
-module.label       = Etikette
-module.lesson      = Lektion
-module.lti         = Externes Werkzeug
-module.manual      = Manueller Artikel
-module.module      = Not avaible
-module.page        = Seite
-module.quiz        = Quiz
-module.resource    = Datei
-module.scorm       = SCORM-Paket
-module.survey      = Umfrage
-module.tab         = Tab-Anzeige
-module.url         = URL
-module.wiki        = Wiki
-module.workshop    = Werkstatt
+module.assign       = Zuordnung
+module.book         = Buch
+module.category     = Kategorie
+module.chat         = Plaudern
+module.choice       = Wahl
+module.data         = Datenbank
+module.feedback     = Feedback
+module.folder       = Mappe
+module.forum        = Forum
+module.glossary     = Glossar
+module.guiadocente  = Teaching guide
+module.imscp        = IMS-Inhaltspaket
+module.kalvidassign = Kaltura Media Assignment
+module.kalvidres    = Kaltura Video Resource
+module.label        = Etikette
+module.lesson       = Lektion
+module.lti          = Externes Werkzeug
+module.manual       = Manueller Artikel
+module.module       = Not avaible
+module.page         = Seite
+module.quiz         = Quiz
+module.resource     = Datei
+module.scorm        = SCORM-Paket
+module.survey       = Umfrage
+module.tab          = Tab-Anzeige
+module.url          = URL
+module.wiki         = Wiki
+module.workshop     = Werkstatt
 
 moreMax = Maximal
 
