--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -111,6 +111,8 @@ charset = File charset
 
 chart.mean                = Mean
 
+chartBackgroundColor = Chart background color
+
 chartlabel.atypicalValue  = Atypical Value
 chartlabel.firstquartile  = First Quartile
 chartlabel.generalMean    = General Mean
@@ -258,6 +260,8 @@ label.withcompletion              = Completed Act.
 label.withhidden                  = With hidden
 
 legendActive = Chart legend
+
+limitDays = Limit days
 
 log.component.activity_report                                   = Activity report
 log.component.assignment                                        = Assignment
@@ -746,32 +750,34 @@ message.export_csv_desglossed = CSV breakdown export successfully. Review the fi
 message.export_csv_success    = CSV export successfully. Review the files in the directory: 
 message.export_png            = PNG export successfully. Review the file: 
 
-module.assign      = Assignment
-module.book        = Book
-module.category    = Category
-module.chat        = Chat
-module.choice      = Choice
-module.data        = Database
-module.feedback    = Feedback
-module.folder      = Folder
-module.forum       = Forum
-module.glossary    = Glossary
-module.guiadocente = Teaching guide
-module.imscp       = IMS content package
-module.label       = Label
-module.lesson      = Lesson
-module.lti         = External tool
-module.manual      = Manual item
-module.module      = Not avaible
-module.page        = Page
-module.quiz        = Quiz
-module.resource    = File
-module.scorm       = SCORM package
-module.survey      = Survey
-module.tab         = Tab display
-module.url         = URL
-module.wiki        = Wiki
-module.workshop    = Workshop
+module.assign       = Assignment
+module.book         = Book
+module.category     = Category
+module.chat         = Chat
+module.choice       = Choice
+module.data         = Database
+module.feedback     = Feedback
+module.folder       = Folder
+module.forum        = Forum
+module.glossary     = Glossary
+module.guiadocente  = Teaching guide
+module.imscp        = IMS content package
+module.kalvidassign = Kaltura Media Assignment
+module.kalvidres    = Kaltura Video Resource
+module.label        = Label
+module.lesson       = Lesson
+module.lti          = External tool
+module.manual       = Manual item
+module.module       = Not avaible
+module.page         = Page
+module.quiz         = Quiz
+module.resource     = File
+module.scorm        = SCORM package
+module.survey       = Survey
+module.tab          = Tab display
+module.url          = URL
+module.wiki         = Wiki
+module.workshop     = Workshop
 
 moreMax = Maximum
 
