--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -111,6 +111,8 @@ charset = Codificaci\u00F3n de fichero
 
 chart.mean                = Media
 
+chartBackgroundColor = Color de fondo de la gr\u00E1fica
+
 chartlabel.atypicalValue  = Valor At\u00EDpico
 chartlabel.firstquartile  = Primer Cuartil
 chartlabel.generalMean    = Media General
@@ -258,6 +260,8 @@ label.withcompletion              = Act. Complet.
 label.withhidden                  = Con ocultos
 
 legendActive = Leyenda del gr\u00E1fico
+
+limitDays = L\u00EDmite de d\u00EDas
 
 log.component.activity_report                                   = Actividad del curso
 log.component.assignment                                        = Tarea
@@ -746,32 +750,34 @@ message.export_csv_desglossed = Exportaci\u00F3n CSV desglosado con \u00E9xito. 
 message.export_csv_success    = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio: 
 message.export_png            = Exportaci\u00F3n PNG con \u00E9xito. Revise el fichero: 
 
-module.assign      = Tarea
-module.book        = Libro
-module.category    = Categor\u00EDa
-module.chat        = Chat
-module.choice      = Consulta
-module.data        = Base de datos
-module.feedback    = Encuesta
-module.folder      = Carpeta
-module.forum       = Foro
-module.glossary    = Glosario
-module.guiadocente = Gu\u00EDa docente
-module.imscp       = Paquete de contenido IMS
-module.label       = Etiqueta
-module.lesson      = Lecci\u00F3n
-module.lti         = Herramienta externa
-module.manual      = \u00CDtem manual
-module.module      = No disponible
-module.page        = P\u00E1gina
-module.quiz        = Cuestionario
-module.resource    = Archivo
-module.scorm       = Paquete SCORM
-module.survey      = Encuestas predefinidas
-module.tab         = Pesta\u00F1a de visualizaci\u00F3n
-module.url         = URL
-module.wiki        = Wiki
-module.workshop    = Taller
+module.assign       = Tarea
+module.book         = Libro
+module.category     = Categor\u00EDa
+module.chat         = Chat
+module.choice       = Consulta
+module.data         = Base de datos
+module.feedback     = Encuesta
+module.folder       = Carpeta
+module.forum        = Foro
+module.glossary     = Glosario
+module.guiadocente  = Gu\u00EDa docente
+module.imscp        = Paquete de contenido IMS
+module.kalvidassign = Kaltura Media Assignment
+module.kalvidres    = Kaltura Video Resource
+module.label        = Etiqueta
+module.lesson       = Lecci\u00F3n
+module.lti          = Herramienta externa
+module.manual       = \u00CDtem manual
+module.module       = No disponible
+module.page         = P\u00E1gina
+module.quiz         = Cuestionario
+module.resource     = Archivo
+module.scorm        = Paquete SCORM
+module.survey       = Encuestas predefinidas
+module.tab          = Pesta\u00F1a de visualizaci\u00F3n
+module.url          = URL
+module.wiki         = Wiki
+module.workshop     = Taller
 
 moreMax = M\u00E1ximo
 
