--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -111,6 +111,8 @@ charset = File charset
 
 chart.mean                = Signifier
 
+chartBackgroundColor = Chart background color
+
 chartlabel.atypicalValue  = Valeur atypique
 chartlabel.firstquartile  = Premier quartile
 chartlabel.generalMean    = Moyenne g\u00E9n\u00E9rale
@@ -258,6 +260,8 @@ label.withcompletion              = Completed Act.
 label.withhidden                  = Avec cach\u00E9
 
 legendActive = Graphique l\u00E9gende
+
+limitDays = Limit days
 
 log.component.activity_report                                   = Activit\u00E9s du cours
 log.component.assignment                                        = Devoir
@@ -746,32 +750,34 @@ message.export_csv_desglossed = Export CSV avec succ\u00E8s. Passez en revue les
 message.export_csv_success    = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 message.export_png            = Export PNG avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 
-module.assign      = Affectation
-module.book        = Livre
-module.category    = Cat\u00E9gorie
-module.chat        = Bavarder
-module.choice      = Choix
-module.data        = Base de donn\u00E9es
-module.feedback    = Retour d'information
-module.folder      = Dossier
-module.forum       = Forum
-module.glossary    = Glossaire
-module.guiadocente = Teaching guide
-module.imscp       = Paquet de contenu IMS
-module.label       = \u00C9tiquette
-module.lesson      = Le\u00E7on
-module.lti         = Outil externe
-module.manual      = \u00C9l\u00E9ment manuel
-module.module      = Not avaible
-module.page        = Page
-module.quiz        = Quiz
-module.resource    = Fichier
-module.scorm       = Forfait SCORM
-module.survey      = Sondage
-module.tab         = Affichage par onglet
-module.url         = URL
-module.wiki        = Wiki
-module.workshop    = Atelier
+module.assign       = Affectation
+module.book         = Livre
+module.category     = Cat\u00E9gorie
+module.chat         = Bavarder
+module.choice       = Choix
+module.data         = Base de donn\u00E9es
+module.feedback     = Retour d'information
+module.folder       = Dossier
+module.forum        = Forum
+module.glossary     = Glossaire
+module.guiadocente  = Teaching guide
+module.imscp        = Paquet de contenu IMS
+module.kalvidassign = Kaltura Media Assignment
+module.kalvidres    = Kaltura Video Resource
+module.label        = \u00C9tiquette
+module.lesson       = Le\u00E7on
+module.lti          = Outil externe
+module.manual       = \u00C9l\u00E9ment manuel
+module.module       = Not avaible
+module.page         = Page
+module.quiz         = Quiz
+module.resource     = Fichier
+module.scorm        = Forfait SCORM
+module.survey       = Sondage
+module.tab          = Affichage par onglet
+module.url          = URL
+module.wiki         = Wiki
+module.workshop     = Atelier
 
 moreMax = Maximum
 
