--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -111,6 +111,8 @@ charset = File charset
 
 chart.mean                = Significare
 
+chartBackgroundColor = Chart background color
+
 chartlabel.atypicalValue  = Valore atipico
 chartlabel.firstquartile  = Primo quartile
 chartlabel.generalMean    = Media generale
@@ -258,6 +260,8 @@ label.withcompletion              = Completed Act.
 label.withhidden                  = Con nascosto
 
 legendActive = Grafico leggenda
+
+limitDays = Limit days
 
 log.component.activity_report                                   = Attivit\u00E0 del corso
 log.component.assignment                                        = Compito
@@ -746,32 +750,34 @@ message.export_csv_desglossed = Esportazione CSV con successo. Esaminare i file:
 message.export_csv_success    = Esportazione CSV con successo. Esaminare i file nella directory: 
 message.export_png            = Esportazione PNG con successo. Esaminare i file nella directory: 
 
-module.assign      = assegnazione
-module.book        = Libro
-module.category    = Categoria
-module.chat        = Chiacchierare
-module.choice      = Scelta
-module.data        = Banca dati
-module.feedback    = Risposta
-module.folder      = Cartella
-module.forum       = Forum
-module.glossary    = Glossario
-module.guiadocente = Teaching guide
-module.imscp       = Pacchetto di contenuti IMS
-module.label       = Etichetta
-module.lesson      = Lezione
-module.lti         = Strumento esterno
-module.manual      = Articolo manuale
-module.module      = Not avaible
-module.page        = Pagina
-module.quiz        = Quiz
-module.resource    = File
-module.scorm       = Pacchetto SCORM
-module.survey      = Sondaggio
-module.tab         = Tab display
-module.url         = URL
-module.wiki        = wiki
-module.workshop    = laboratorio
+module.assign       = assegnazione
+module.book         = Libro
+module.category     = Categoria
+module.chat         = Chiacchierare
+module.choice       = Scelta
+module.data         = Banca dati
+module.feedback     = Risposta
+module.folder       = Cartella
+module.forum        = Forum
+module.glossary     = Glossario
+module.guiadocente  = Teaching guide
+module.imscp        = Pacchetto di contenuti IMS
+module.kalvidassign = Kaltura Media Assignment
+module.kalvidres    = Kaltura Video Resource
+module.label        = Etichetta
+module.lesson       = Lezione
+module.lti          = Strumento esterno
+module.manual       = Articolo manuale
+module.module       = Not avaible
+module.page         = Pagina
+module.quiz         = Quiz
+module.resource     = File
+module.scorm        = Pacchetto SCORM
+module.survey       = Sondaggio
+module.tab          = Tab display
+module.url          = URL
+module.wiki         = wiki
+module.workshop     = laboratorio
 
 moreMax = Massimo
 
