--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -111,6 +111,8 @@ charset = File charset
 
 chart.mean                = Significar
 
+chartBackgroundColor = Chart background color
+
 chartlabel.atypicalValue  = Valor at\u00EDpico
 chartlabel.firstquartile  = Primeiro quartil
 chartlabel.generalMean    = M\u00E9dia Geral
@@ -258,6 +260,8 @@ label.withcompletion              = Completed Act.
 label.withhidden                  = Com oculto\r\n\r\n\r\n
 
 legendActive = Legenda do gr\u00E1fico
+
+limitDays = Limit days
 
 log.component.activity_report                                   = Relat\u00F3rio de atividades
 log.component.assignment                                        = Trabalho
@@ -746,32 +750,34 @@ message.export_csv_desglossed = Exporta\u00E7\u00E3o CSV com sucesso. Revise os 
 message.export_csv_success    = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
 message.export_png            = Exporta\u00E7\u00E3o PNG com sucesso. Revise os arquivos no diret\u00F3rio: 
 
-module.assign      = Tarefa
-module.book        = Livro
-module.category    = Categoria
-module.chat        = Bate-papo
-module.choice      = Escolha
-module.data        = Base de dados
-module.feedback    = Coment\u00E1rios
-module.folder      = Pasta
-module.forum       = F\u00F3rum
-module.glossary    = Gloss\u00E1rio
-module.guiadocente = Teaching guide
-module.imscp       = Pacote de conte\u00FAdo IMS
-module.label       = R\u00F3tulo
-module.lesson      = Li\u00E7\u00E3o
-module.lti         = Ferramenta externa
-module.manual      = Item manual
-module.module      = Not avaible
-module.page        = P\u00E1gina
-module.quiz        = Question\u00E1rio
-module.resource    = Arquivo
-module.scorm       = Pacote SCORM
-module.survey      = Pesquisa
-module.tab         = Exibi\u00E7\u00E3o de guia
-module.url         = URL
-module.wiki        = Wiki
-module.workshop    = Oficina
+module.assign       = Tarefa
+module.book         = Livro
+module.category     = Categoria
+module.chat         = Bate-papo
+module.choice       = Escolha
+module.data         = Base de dados
+module.feedback     = Coment\u00E1rios
+module.folder       = Pasta
+module.forum        = F\u00F3rum
+module.glossary     = Gloss\u00E1rio
+module.guiadocente  = Teaching guide
+module.imscp        = Pacote de conte\u00FAdo IMS
+module.kalvidassign = Kaltura Media Assignment
+module.kalvidres    = Kaltura Video Resource
+module.label        = R\u00F3tulo
+module.lesson       = Li\u00E7\u00E3o
+module.lti          = Ferramenta externa
+module.manual       = Item manual
+module.module       = Not avaible
+module.page         = P\u00E1gina
+module.quiz         = Question\u00E1rio
+module.resource     = Arquivo
+module.scorm        = Pacote SCORM
+module.survey       = Pesquisa
+module.tab          = Exibi\u00E7\u00E3o de guia
+module.url          = URL
+module.wiki         = Wiki
+module.workshop     = Oficina
 
 moreMax = M\u00E1ximo
 
