Added search tab, refactorized web service functions

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -104,6 +104,7 @@ button.apply   = Apply
 button.logout  = Logout
 button.restore = Restore Defaults
 button.save    = Save
+button.search  = Search
 
 calculateMax = Calculate max
 
@@ -795,12 +796,14 @@ tab.risk               = Risk of dropping out
 tab.section            = Sections
 tab.visualization      = Visual analytic
 
+text.activitycompletion = Activities completion
 text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Local Files
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
+text.coursedata         = Course data
 text.days               = Days
 text.empty              = N.A
 text.exportcsv          = Export CSV...
@@ -810,10 +813,12 @@ text.fail               = Fail
 text.favorite           = Starred
 text.filteredusers      = Filtered users
 text.future             = Future
+text.gradeitems         = Grades
 text.hours              = Hours
 text.inprogress         = In progress
 text.lastaccess         = Last access: 
 text.license            = License: MIT
+text.logs               = Logs
 text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Never
@@ -825,6 +830,7 @@ text.pass               = Pass
 text.past               = Past
 text.recent             = Recent
 text.restoredefault     = Are you sure you want to restore the default settings?
+text.search             = Search
 text.seconds            = Seconds
 text.sectionplaceholder = Front page
 text.see                = See 
