--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -104,6 +104,7 @@ button.apply   = Aplicar
 button.logout  = Cerrar sesi\u00F3n
 button.restore = Restaurar valores por defecto
 button.save    = Guardar
+button.search  = Buscar
 
 calculateMax = Calcular m\u00E1ximo
 
@@ -795,12 +796,14 @@ tab.risk               = Riesgo de abandono
 tab.section            = Secci\u00F3n
 tab.visualization      = An\u00E1lisis visual
 
+text.activitycompletion = Actividades finalizadas
 text.all                = Todos
 text.author             = Autores:
 text.betweendates       = Entre {0} y {1} d\u00EDas
 text.cache              = Archivos locales
 text.confirmation       = Confirmaci\u00F3n
 text.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
+text.coursedata         = Datos del curso
 text.days               = d\u00EDas
 text.empty              = S.C
 text.exportcsv          = Exportar CSV...
@@ -810,10 +813,12 @@ text.fail               = Suspenso
 text.favorite           = Destacados
 text.filteredusers      = Usuarios filtrados
 text.future             = Futuros
+text.gradeitems         = Calificaciones
 text.hours              = horas
 text.inprogress         = En progreso
 text.lastaccess         = \u00DAltimo acceso: 
 text.license            = Licencia: MIT
+text.logs               = Registros
 text.minutes            = minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
@@ -825,6 +830,7 @@ text.pass               = Aprobado
 text.past               = Pasados
 text.recent             = Recientes
 text.restoredefault     = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
+text.search             = Buscar
 text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
 text.see                = Ver 
