--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -104,6 +104,7 @@ button.apply   = Apply
 button.logout  = Connectez - Out
 button.restore = Restore Defaults
 button.save    = Save
+button.search  = Search
 
 calculateMax = Calculer max
 
@@ -795,12 +796,14 @@ tab.risk               = Risk of dropping out
 tab.section            = Section
 tab.visualization      = Visual analytic
 
+text.activitycompletion = Activities completion
 text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Fichiers locaux
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
+text.coursedata         = Course data
 text.days               = Journ\u00E9es
 text.empty              = N.A
 text.exportcsv          = Export CSV...
@@ -810,10 +813,12 @@ text.fail               = Fail
 text.favorite           = Favoris\r\n
 text.filteredusers      = Filtered users
 text.future             = Future
+text.gradeitems         = Grades
 text.hours              = Heures
 text.inprogress         = In progress
 text.lastaccess         = Dernier acc\u00E8s:
 text.license            = License: MIT
+text.logs               = Logs
 text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Jamais
@@ -825,6 +830,7 @@ text.pass               = Pass
 text.past               = Past
 text.recent             = R\u00E9cente
 text.restoredefault     = Etes-vous s\u00FBr que vous voulez restaurer les param\u00E8tres par d\u00E9faut?
+text.search             = Search
 text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
 text.see                = See 
