--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -104,6 +104,7 @@ button.apply   = Apply
 button.logout  = Disconnettersi
 button.restore = Restore Defaults
 button.save    = Save
+button.search  = Search
 
 calculateMax = Calcolare max
 
@@ -795,12 +796,14 @@ tab.risk               = Risk of dropping out
 tab.section            = Sezione
 tab.visualization      = Visual analytic
 
+text.activitycompletion = Activities completion
 text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = File locali
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
+text.coursedata         = Course data
 text.days               = giorni
 text.empty              = N.A
 text.exportcsv          = Export CSV...
@@ -810,10 +813,12 @@ text.fail               = Fail
 text.favorite           = Preferiti
 text.filteredusers      = Filtered users
 text.future             = Future
+text.gradeitems         = Grades
 text.hours              = Ore
 text.inprogress         = In progress
 text.lastaccess         = Ultimo accesso:
 text.license            = License: MIT
+text.logs               = Logs
 text.minutes            = Minuti
 text.moodle             = Moodle: 
 text.never              = Mai
@@ -825,6 +830,7 @@ text.pass               = Pass
 text.past               = Past
 text.recent             = Recente
 text.restoredefault     = Sei sicuro di voler ripristinare le impostazioni di default?
+text.search             = Search
 text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
 text.see                = See 
