--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -104,6 +104,7 @@ button.apply   = Apply
 button.logout  = Sair
 button.restore = Restore Defaults
 button.save    = Save
+button.search  = Search
 
 calculateMax = Calcular max
 
@@ -795,12 +796,14 @@ tab.risk               = Risk of dropping out
 tab.section            = Se\u00E7\u00E3o
 tab.visualization      = Visual analytic
 
+text.activitycompletion = Activities completion
 text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Ficheiros locais
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
+text.coursedata         = Course data
 text.days               = Dias
 text.empty              = N.A
 text.exportcsv          = Export CSV...
@@ -810,10 +813,12 @@ text.fail               = Fail
 text.favorite           = Com estrela
 text.filteredusers      = Filtered users
 text.future             = Future
+text.gradeitems         = Grades
 text.hours              = Horas
 text.inprogress         = In progress
 text.lastaccess         = \u00DAltimo acesso:
 text.license            = License: MIT
+text.logs               = Logs
 text.minutes            = Minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
@@ -825,6 +830,7 @@ text.pass               = Pass
 text.past               = Past
 text.recent             = Recentes
 text.restoredefault     = Tem certeza de que deseja restaurar as configura\u00E7\u00F5es padr\u00E3o?
+text.search             = Search
 text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
 text.see                = See 
