--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -104,6 +104,7 @@ button.apply   = Apply
 button.logout  = Tancar sessi\u00F3
 button.restore = Restore Defaults
 button.save    = Save
+button.search  = Search
 
 calculateMax = calcular m\u00E0xim
 
@@ -795,12 +796,14 @@ tab.risk               = Risk of dropping out
 tab.section            = Secci\u00F3
 tab.visualization      = Visual analytic
 
+text.activitycompletion = Activities completion
 text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Els arxius locals
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
+text.coursedata         = Course data
 text.days               = Dies
 text.empty              = N.A
 text.exportcsv          = Export CSV...
@@ -810,10 +813,12 @@ text.fail               = Fail
 text.favorite           = Destacats
 text.filteredusers      = Filtered users
 text.future             = Future
+text.gradeitems         = Grades
 text.hours              = Hores
 text.inprogress         = In progress
 text.lastaccess         = \u00DAltim acc\u00E9s:
 text.license            = License: MIT
+text.logs               = Logs
 text.minutes            = Minuts
 text.moodle             = Moodle: 
 text.never              = Mai
@@ -825,6 +830,7 @@ text.pass               = Pass
 text.past               = Past
 text.recent             = Recents
 text.restoredefault     = Esteu segur que voleu restaurar la configuraci\u00F3 per defecte?
+text.search             = Search
 text.seconds            = Segons
 text.sectionplaceholder = Portada
 text.see                = See 
