--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -104,6 +104,7 @@ button.apply   = Apply
 button.logout  = Ausloggen
 button.restore = Restore Defaults
 button.save    = Save
+button.search  = Search
 
 calculateMax = berechnen Sie max
 
@@ -795,12 +796,14 @@ tab.risk               = Risk of dropping out
 tab.section            = Abschnitt
 tab.visualization      = Visual analytic
 
+text.activitycompletion = Activities completion
 text.all                = All
 text.author             = Authors:
 text.betweendates       = Between {0} and {1} days
 text.cache              = Lokale Dateien
 text.confirmation       = Confirmation
 text.confirmationtext   = Are you sure to remove the cache of the selected course?
+text.coursedata         = Course data
 text.days               = Tage
 text.empty              = N.A
 text.exportcsv          = Export CSV...
@@ -810,10 +813,12 @@ text.fail               = Fail
 text.favorite           = Als Favorit markiert
 text.filteredusers      = Filtered users
 text.future             = Future
+text.gradeitems         = Grades
 text.hours              = Std
 text.inprogress         = In progress
 text.lastaccess         = Letzter Zugriff:
 text.license            = License: MIT
+text.logs               = Logs
 text.minutes            = Protokoll
 text.moodle             = Moodle: 
 text.never              = noch nie
@@ -825,6 +830,7 @@ text.pass               = Pass
 text.past               = Past
 text.recent             = K\u00FCrzlich\r\n
 text.restoredefault     = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
+text.search             = Search
 text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
 text.see                = See 
